// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";

package com.example;

message SetValueCommand {
    string entity_id = 1 [(akkaserverless.field).entity_key = true];
    int32 value = 2;
}

message GetValueCommand {
    string entity_id = 1 [(akkaserverless.field).entity_key = true];
}

message MyResult {
    int32 value = 1;
}

service MyServiceEntity {
    option (akkaserverless.codegen) = {
      event_sourced_entity: {
        name: ".domain.MyEntity"
        entity_type: "MyEntity"
        state: ".domain.MyState"
        events: ".domain.ValueSet"
      }
    };
    rpc SetValue(SetValueCommand) returns (google.protobuf.Empty);
    rpc GetValue(GetValueCommand) returns (MyResult);
}
