syntax = "proto3";

package com.example.domain;

message MyState {
    int32 value = 1;
}

message ValueSet {
    string entity_id = 1 [(akkaserverless.field).entity_key = true];
}
